--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/bg.jpg
     - images/img1.jpg
     - images/img2.jpg
     - images/img3.jpg
